# WebCraft

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
WebCraft/: CMakeLists.txt  WebCraft.cpp  WebCraft.h
include/webcraft/: web_math.h  webcraft.h
include/webcraft/net/: net.h  readme.md  sockets.h
include/webcraft/net/http/: http.h
include/webcraft/util/: async.h  debug.h  events.h  io.h  statics.h  unit_test.h
include/webcraft/util/async/: async.h  executors.hpp  readme.md  task.h
src/webcraft/: web_math.cpp
src/webcraft/net/: net.cpp  sockets.cpp
src/webcraft/util/: async.cpp  debug.cpp
test/webcraft/: test_async.h  test_executors.h  test_main.cpp  test_net.h  test_sockets.h  test_web_math.cpp  test_web_math.h
